--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>A subheading with a brief description of you, your work,<br> and what you’re all about—no biggie</p>
         <div class="card-container">
             <div class="card">
-                <img src="/img/image1.jpg" alt="Image 1" class="imgcard">
+                <img src="img/image1.jpg" alt="Image 1" class="imgcard">
                 <h3>Réparation</h3>
                 <p>Description Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
