--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="#"><button class="cta_acc">Button</button></a>
             </div>
             <div class="card">
-                <img src="/img/image2.jpg" alt="Image 2" class="imgcard2">
+                <img src="img/image2.jpg" alt="Image 2" class="imgcard2">
                 <h3>Conseils/Tuto</h3>
                 <p>Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -68,7 +68,7 @@
                 <a href="#"><button class="cta_acc">Button</button></a>
             </div>
             <div class="card">
-                <img src="/img/image3.png" alt="Image 3" class="imgcard3">
+                <img src="img/image3.png" alt="Image 3" class="imgcard3">
                 <h3>Recyclage</h3>
                 <p>Description Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -112,7 +112,7 @@
         <h3>Seconde main - Reconditionné par nos soins</h3>
         <p>A subheading with a brief description of you, your work, and what you’re all about—no biggie</p>
         <div class="banner_achat">
-            <img src="/img/pasteque.png" alt="image de pasteque">
+            <img src="img/pasteque.png" alt="image de pasteque">
 
             <div class="text_banner">
                 <h2>Shop Title</h2>
@@ -129,7 +129,7 @@
         <p>A subheading with a brief description of you, your work, and what you’re all about—no biggie</p>
         <div class="card_produit_container">
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
@@ -157,14 +157,14 @@
             </div>
 
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
@@ -178,7 +178,7 @@
         <div class="filtre_text">
             <h3>Par famille</h3>
             <p>Subheading to introduce testimonials</p>
-            <img src="/img/champignon.jpg" alt=""champignon>
+            <img src="img/champignon.jpg" alt=""champignon>
         </div>
         <div class="gamme_card_container">
             <div class="gamme_card">
@@ -253,7 +253,7 @@
                 </div>
 
             <div class="img_acc_about">
-            <img src="/img/groupe.jpg" alt="Groupe de personne">
+            <img src="img/groupe.jpg" alt="Groupe de personne">
             </div>
         </div>
     </div>
