--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="card_produit">
-                <img src="/img/poire.jpg">
+                <img src="img/poire.jpg">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
