Maj index, service et css

--- a/services.html
+++ b/services.html
@@ -21,6 +21,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="produits.html">Produis</a></li>
                 <li><a href="#a-propos">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
