--- a/produits.html
+++ b/produits.html
@@ -68,6 +68,18 @@
             </div>
         </div>
     </div>
+    <div class="prod_marque_container">
+        <div class="prod_marque_text">
+            <h3>Par marque</h3>
+        </div>
+        <div class="prod_marque_button_container">
+          <a><button class="button_marque">Marque</button></a>
+          <a><button class="button_marque">Marque</button></a>
+          <a><button class="button_marque">Marque</button></a>
+          <a><button class="button_marque">Marque</button></a>
+          <a><button class="button_marque">Marque</button></a>
+        </div>
+    </div>
 
 
 
