--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="nav-right">
             <ul class="nav-links">
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html" style="color:white">Accueil</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="produits.html">Produits</a></li>
                 <li><a href="produits.html">À propos</a></li>
