--- a/produits.html
+++ b/produits.html
@@ -21,8 +21,8 @@
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="produits.html">Produits</a></li>
-                <li><a href="produits.html">À propos</a></li>
+                <li><a href="produits.html" style="color:white">Produits</a></li>
+                <li><a href="produits.html" >À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="search-bar">
