--- a/produits.html
+++ b/produits.html
@@ -21,8 +21,8 @@
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="produits.html" style="color:white">Produits</a></li>
-                <li><a href="produits.html" >À propos</a></li>
+                <li><a href="produits.html">Produits</a></li>
+                <li><a href="produits.html">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="search-bar">
@@ -66,18 +66,6 @@
                 </div>
 
             </div>
-        </div>
-    </div>
-    <div class="prod_marque_container">
-        <div class="prod_marque_text">
-            <h3>Par marque</h3>
-        </div>
-        <div class="prod_marque_button_container">
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
         </div>
     </div>
 
