--- a/services.html
+++ b/services.html
@@ -20,8 +20,8 @@
         <div class="nav-right">
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="services.html" style="color:white">Services</a></li>
-                <li><a href="produits.html">Produits</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="produits.html">Produis</a></li>
                 <li><a href="#a-propos">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
