--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and 
             typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
             1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <a href=""><button class="cta-acc">Bouton</button></a>
+        <button class="cta-acc">Bouton</button>
     </div>
 
     <div class="service_acc">
@@ -58,7 +58,7 @@
                       pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
                       culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                <a href="#"><button class="cta_acc">Button</button></a>
+                <button class="cta_acc">Button</button>
             </div>
             <div class="card">
                 <img src="img/image2.jpg" alt="Image 2" class="imgcard2">
@@ -70,7 +70,7 @@
                     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
                     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
                     culpa qui officia deserunt mollit anim id est laborum</p>
-                <a href="#"><button class="cta_acc">Button</button></a>
+                <button class="cta_acc">Button</button>
             </div>
             <div class="card">
                 <img src="img/image3.png" alt="Image 3" class="imgcard3">
@@ -82,7 +82,7 @@
                      eprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
                      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in c
                      ulpa qui officia deserunt mollit anim id est laborum</p>
-                <a href="#"><button class="cta_acc">Button</button></a>
+                <button class="cta_acc">Button</button>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
         <div class="contact_phone">
             <h2>Contactez-nous</h2>
             <i class="fa-solid fa-phone phone-icon"></i>
-            <a href="#"><button>00 00 00 00 00</button></a>
+            <button>00 00 00 00 00</button>
             <div class="contact_adresse">
                 <img src="img/carte.jpg">
                 <p>Adresse :<br>2A All. Jacques Frimot 35000 Rennes</p>
@@ -110,7 +110,7 @@
                 <label>Votre message, questions</label>
                 <input type="text" id="message" name="message" placeholder="Votre message">
             </form>
-            <a href="#"><button>Envoyer</button></a>
+            <button>Envoyer</button>
         </div>
     </div>
 
@@ -124,7 +124,7 @@
             <div class="text_banner">
                 <h2>Shop Title</h2>
                 <h3>Subheading with description of your shopping site</h3>
-                <a href="#"><button>Button</button></a>
+                <button>Button</button>
             </div>
         </div>
         
@@ -191,7 +191,7 @@
                     <li>Réfrigirateur</li>
                     <li>Sèche-linge</li>
                     <li>...</li>
-                    <a href="#"><button>Select</button></a>
+                    <button>Select</button>
                 </ul>
             </div>
 
@@ -213,7 +213,7 @@
                     <li>Réfrigirateur</li>
                     <li>Sèche-linge</li>
                     <li>...</li>
-                    <a href="#"><button>Select</button></a>
+                    <button>Select</button>
                 </ul>
             </div>
 
@@ -226,14 +226,14 @@
             <p>Subheading to introduce testimonials</p>
         </div>
         <div class="marque_acc_but_container">
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
-          <a><button class="button_marque">Marque</button></a>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
+          <button class="button_marque">Marque</button>
         </div>
     </div>
     
