--- a/index.html
+++ b/index.html
@@ -134,42 +134,42 @@
             <p>A subheading with a brief description of you, your work, and what you’re all about—no biggie</p>
         <div class="card_produit_container">
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
             </div>
 
             <div class="card_produit">
-                <img src="img/poire.jpg">
+                <img src="img/poire.jpg" alt="poire">
                 <h4>Produits</h4>
                 <p>Description of first product</p>
                 <span>$10.99</span>
@@ -181,7 +181,7 @@
         <div class="filtre_text">
             <h3>Par famille</h3>
             <p>Subheading to introduce testimonials</p>
-            <img src="img/champignon.jpg" alt=""champignon>
+            <img src="img/champignon.jpg" alt="champignon">
         </div>
         <div class="gamme_card_container">
             <div class="gamme_card">
