Changement pour éviter les erreurs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="accueil.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -94,7 +94,7 @@
             <i class="fa-solid fa-phone phone-icon"></i>
             <button>00 00 00 00 00</button>
             <div class="contact_adresse">
-                <img src="img/carte.jpg">
+                <img src="img/carte.jpg" alt="image de carte map">
                 <p>Adresse :<br>2A All. Jacques Frimot 35000 Rennes</p>
         </div>
         </div>
