--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
         </div>
         <div class="second_section_footer">
-            <div class="topic_section" id="only-topic">
+            <div class="topic_section2">
                 <h5>Topic</h5>
                 <ul>
                     <li><a href="#">Page</a></li>
