Ajout du menu burger

--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
             <div class="search-bar">
                 <input type="text" placeholder="Recherche...">
             </div>
-            <div class="menu-bg">
+            <div class="menu-bg" id="openBtn">
                 <i class="fa-solid fa-bars menu-burger"></i>
             </div>
+            <div id="mySidenav" class="sidenav">
+                <a id="closeBtn" href="#" class="close">&times;</a>
+                <ul>
+                  <li><a href="#">A propos</a></li>
+                  <li><a href="#">Nos services</a></li>
+                  <li><a href="#">Témoignages</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
         </div>
     </nav>
     <div class="acc_pres">
