Ajustement du footer en responsive

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </div>
             <div class="topic_section">
                 <h5>Topic</h5>
-                <ul>
+                <ul class="topic_link">
                     <li><a href="#">Page</a></li>
                     <li><a href="#">Page</a></li>
                     <li><a href="#">Page</a></li>
