Modification du menu burger

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <div id="mySidenav" class="sidenav">
                 <a id="closeBtn" href="#" class="close">&times;</a>
                 <ul>
-                  <li><a href="#">A propos</a></li>
-                  <li><a href="#">Nos services</a></li>
-                  <li><a href="#">Témoignages</a></li>
+                  <li><a href="#">Accueil</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Produits</a></li>
+                  <li><a href="#">À propos</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </div>
